# fastapiusers-edgedb

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  test_build.py
.github/: dependabot.yml  stale.yml
.github/workflows/: build.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql  00016.edgeql  00017.edgeql  00018.edgeql  00019.edgeql  00020.edgeql  00021.edgeql  00022.edgeql  00023.edgeql  00024.edgeql  00025.edgeql  00026.edgeql
fastapiusers_edgedb/: __init__.py  access_token.py  user_api.py
fastapiusers_edgedb/queries/: add_oauth_account.edgeql  create_user.edgeql  delete_user.edgeql  get_oauth_account.edgeql  get_user_by_email.edgeql  get_user_by_id.edgeql  insert_oauth_account.edgeql  update_user.edgeql
tests/: .test_harmonic_mean.py.swp  conftest.py  test_access_token.py  test_fastapi_users_db_edgedb.py
