[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=test_build.py"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["flit_core >=3.2,<4"]
# identifies the entry point to the build backend object, using the dotted path as a string.
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "fastapiusers_edgedb"

[tool.flit.sdist]
exclude = ["tests/", "dbschema/", "fastapiusers_edgedb/queries/", "fastapiusers-edgedb-*"]

# project’s core metadata
[project]
name = "fastapiusers-edgedb"
authors = [
    { name = "0xsirsaif", email = "sirsaif99@gmail.com" }
]
description = "FastAPI Users - Database adapter for EdgeDB"
readme = "README.md"
# This clearly delineates which metadata is purposefully unspecified and expected to stay unspecified
# compared to being provided via tooling later on.
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.7"
dependencies = [
    "fastapi-users >= 10.0.0",
    "edgedb >= 1.2.0"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "requests",
    "isort",
    "pytest-asyncio",
    "flake8-docstrings",
    "black",
    "mypy",
    "codecov",
    "pytest-cov",
    "pytest-mock",
    "asynctest",
    "flit",
    "bumpversion",
    "httpx",
    "asgi_lifespan",
]

[project.urls]
Documentation = "https://fastapi-users.github.io/fastapi-users"
